--- a/src/views/pessoa/cadastrar.html
+++ b/src/views/pessoa/cadastrar.html
@@ -9,6 +9,21 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <style>
+
+.gradient{
+        display: flex;
+        height: 100vh;
+        width: 100vw;
+        background-color:hsla(0,100%,50%,1);
+        background-image:
+        radial-gradient(at 40% 20%, hsla(28,100%,74%,1) 0px, transparent 50%),
+        radial-gradient(at 84% 14%, hsla(189,100%,56%,1) 0px, transparent 50%),
+        radial-gradient(at 0% 50%, hsla(355,100%,93%,1) 0px, transparent 50%),
+        radial-gradient(at 80% 49%, hsla(340,100%,76%,1) 0px, transparent 50%),
+        radial-gradient(at 0% 100%, hsla(22,100%,77%,1) 0px, transparent 50%),
+        radial-gradient(at 80% 100%, hsla(242,100%,70%,1) 0px, transparent 50%),
+        radial-gradient(at 0% 0%, hsla(343,100%,76%,1) 0px, transparent 50%);
+    }
     button {
   padding: 1.3em 3em;
   font-size: 12px;
@@ -36,7 +51,7 @@ button:active {
   transform: translateY(-1px);
 }
 </style>
-<body>
+<body class="gradient">
 
     <div class="container mt-5">
         {{#pessoa}}
