--- a/src/views/pessoa/editar.html
+++ b/src/views/pessoa/editar.html
@@ -8,8 +8,50 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+<style>
 
-<body>
+    .gradient{
+            display: flex;
+            height: 100vh;
+            width: 100vw;
+            background-color:hsla(0,100%,50%,1);
+            background-image:
+            radial-gradient(at 40% 20%, hsla(28,100%,74%,1) 0px, transparent 50%),
+            radial-gradient(at 84% 14%, hsla(189,100%,56%,1) 0px, transparent 50%),
+            radial-gradient(at 0% 50%, hsla(355,100%,93%,1) 0px, transparent 50%),
+            radial-gradient(at 80% 49%, hsla(340,100%,76%,1) 0px, transparent 50%),
+            radial-gradient(at 0% 100%, hsla(22,100%,77%,1) 0px, transparent 50%),
+            radial-gradient(at 80% 100%, hsla(242,100%,70%,1) 0px, transparent 50%),
+            radial-gradient(at 0% 0%, hsla(343,100%,76%,1) 0px, transparent 50%);
+        }
+        button {
+      padding: 1.3em 3em;
+      font-size: 12px;
+      text-transform: uppercase;
+      letter-spacing: 2.5px;
+      font-weight: 500;
+      color: #000;
+      background-color: #fff;
+      border: none;
+      border-radius: 45px;
+      box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+      transition: all 0.3s ease 0s;
+      cursor: pointer;
+      outline: none;
+    }
+    
+    button:hover {
+      background-color: #6b66ff;
+      box-shadow: 0px 15px 20px #ff85ad(46, 229, 157, 0.4);
+      color: #fff;
+      transform: translateY(-7px);
+    }
+    
+    button:active {
+      transform: translateY(-1px);
+    }
+    </style>
+<body class="gradient">
 
     <div class="container mt-5">
 
@@ -66,7 +108,7 @@
             -->
             </div>
             <div class="d-grid mt-3">
-                <button type="submit" class="btn btn-primary btn-block">Salvar</button>
+                <button type="submit" class="button">Salvar</button>
             </div>
         </form>
 
